# handuflow-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  RELEASE.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  main.yml  release.yml
documentation/: API.md  CONFIG.md  DATA_QUALITY.md  DEPLOYMENT.md  ERROR_CODES.md  FEED_SPECS.md  MASTER_SPECS.md  MODULES.md  RUN.md  SETUP.md  SYSTEM_RESTORE.md
documentation/modules/: CONFIG.md  DATA_FLOW_DIAGRAM.md  DATA_MOVEMENT.md  DATA_QUALITY.md  EXCEPTION.md  ORCHESTRATOR.md  RESULT_GENERATOR.md  ROOT.md  SYSTEM_CLEANUP.md  SYSTEM_RESTORE.md  SYSTEM_SHARED.md  VALIDATION.md
files_dev/: config.ini  master_specs.xlsx
files_prod/: config.ini
scripts/: RDOC.md  bump_version.py  release.py  rename_modules.py  run_local_orchestrator.py
src/handuflow/: __init__.py  _version.py  api.py  constants.py  errors.py
src/handuflow/config/: __init__.py  catalog_resolver.py  config_paths.py  load_config.py  logging_config.py  run_logger.py  spark_session.py  validate.py
src/handuflow/data_flow_diagram_generator/: data_flow_diagram_generator.py
src/handuflow/data_movement_controller/: __init__.py  audit_columns.py  base_load_strategy.py  data_load_controller.py  load_dispatcher.py  load_integrity.py
src/handuflow/data_movement_controller/data_class/: load_result.py
src/handuflow/data_movement_controller/load_types/: api_extractor.py  append_load.py  full_load.py  incremental_cdc.py  scd_type_2.py  storage_fetch.py
src/handuflow/data_quality/executors/: comprehensive_dq_executor.py  standard_dq_executor.py
src/handuflow/data_quality/runner/: feed_data_quality_runner.py
src/handuflow/exception/: __init__.py  base_exception.py  config_error.py  data_load_exception.py  data_quality_exception.py  error_codes.py  error_handler.py  extraction_exception.py  result_generation_exception.py  storage_fetch_exception.py  system_error.py  validation_error.py
src/handuflow/orchestrator/: __init__.py  orchestrator.py  result.py  run_guard.py
src/handuflow/result_generator/: result_generator.py
src/handuflow/system_cleanup/: __init__.py  cleanup.py
src/handuflow/system_restore/: __init__.py  restore.py
src/handuflow/system_shared/: __init__.py  delta_utils.py  route_labels.py  spec_tables.py
src/handuflow/validation/: __init__.py  system_launch_validator.py  validation_context.py  validation_result.py  validation_rule.py  validator.py
src/handuflow/validation/validation_rules/: column_exists_in_selection.py  composite_keys_check.py  comprehensive_checks_dependency_dataset_check.py  enforce_master_specs_structure.py  enforce_standard_checks.py  partition_keys_check.py  primary_key.py  standard_check_structure_check.py  vacuum_hours_check.py  validate_feed_specs_json.py  validate_master_specs.py
tests/: README.md  conftest.py
tests/e2e/: README.md  __init__.py  change_events.py  data_generator.py  discover_feeds.py  dq_profiles.py  feed_factory.py  run_e2e.py  spark_setup.py  system_ops.py  test_matrix.py  validators.py
tests/helpers/: __init__.py  spark_isolation.py
tests/regression/: test_audit_columns.py  test_cdc_schema_helpers.py  test_dq_block_load_integration.py  test_dq_gating.py  test_feed_spec_validation.py  test_global_vacuum_hours_config.py  test_load_integrity_unit.py  test_load_types_integration.py  test_partition_mismatch.py  test_restore_table_scope.py  test_result_generator_sheets.py  test_route_labels.py  test_system_cleanup_restore_integration.py
tests/uat_testing/: full_load_test.py  restore.py  test.ipynb
tests/uat_testing/handuflow_dir_full_load/: config.ini  master_specs.xlsx
tests/uat_testing/handuflow_dir_full_load/handuflow_outbound/: results_0d7ca0a3d6654e0681e029f77d72c2f8_20260613_1781355666.xlsx  results_24478973a1c14b3da603c8c873681855_20260613_1781355306.xlsx  results_2a8cc8eac84a4241993fb4b7fea30a8b_20260612_1781249685.xlsx  results_340d66ba634243d786fea01652f385db_20260612_1781249638.xlsx  results_3756c95dba16488c9528db38095d6379_20260613_1781355202.xlsx  results_484d5300261a4068b688dffb35eb2f0e_20260613_1781355638.xlsx  results_59353b41fde04bddaa11f2b03e9b59bf_20260612_1781249535.xlsx  (+6 more)
